# i3s

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/: basic.rs
python/: Cargo.toml
python/src/: lib.rs
src/: accessor.rs  attr.rs  crs.rs  decode.rs  defn.rs  err.rs  geom.rs  lib.rs  mesh.rs  node.rs  obb.rs  options.rs  resource.rs  service.rs  slpk.rs  traits.rs  uri.rs  visual.rs
