[package]
name = "i3s"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
nalgebra = { version = "0.33.2", features = ["serde-serialize"] }
flate2 = "1.1.1"
zip = "2.5.0"
serde_json = "1.0.140"
image = "0.25.6"
reqwest = { version = "0.12.15", features = ["blocking", "json"] }
lazy_static = "1.4"
dashmap = "6.1.0"
thiserror = "2.0.12"
